# ComfyuiDevelopement

./: .gitignore  DESIGN.md  README.md  __init__.py  comfy-env-root.toml  comfy-test.toml  install.py  nodes.py  prestartup_script.py  pyproject.toml  requirements.txt
.github/workflows/: pr-gate.yml  publish.yml  run-tests.yml
nodes/: __init__.py  _model_cache.py  comfy-env.toml  image_utils.py  inference_reconstructor.py  load_model.py  sam3_model_patcher.py  sam3_unified.py  sam3_video_nodes.py  utils.py  video_state.py
nodes/sam3/: __init__.py  attention.py  model.py  perflib.py  predictor.py  text_encoder.py  utils.py
web/: sam3_interactive_widget.js  sam3_multi_prompt_widget.js
web/javascript/: multi_model_viewer.js
workflows/: image_seg_point.json  image_seg_text.json  scene_seg.json  scene_seg_interactive.json  video_point_prompt.json
